# VSS

./: .gitignore  README.md  main.py  pyproject.toml  ta.py  ta2.py  ts.py  tutorial.py
vsapp_core/: __main__.py  app.py
vsapp_core/filedialog30/: example.py  fdialog.py  requirements.txt
